Moved to java 8